--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require-dev": {
         "phpcompatibility/phpcompatibility-wp": "^2.0",
         "szepeviktor/phpstan-wordpress": "^1.3",
-        "wp-coding-standards/wpcs": "^3"
+        "wp-coding-standards/wpcs": "^3",
+        "wp-media/phpunit": "^3"
     },
     "autoload": {
         "files": [
