--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 	},
     "require-dev": {
         "phpcompatibility/phpcompatibility-wp": "^2.0",
+        "phpstan/extension-installer": "^1.4",
         "szepeviktor/phpstan-wordpress": "^1.3",
         "wp-coding-standards/wpcs": "^3",
         "wp-media/phpunit": "^3"
