run integration tests

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,11 @@
     "scripts": {
         "phpcs": "phpcs --basepath=.",
         "phpstan": "vendor/bin/phpstan analyze --memory-limit=2G --no-progress",
-        "test-unit": "\"vendor/bin/phpunit\" --testsuite unit --colors=always --configuration tests/Unit/phpunit.xml.dist --coverage-php tests/report/unit.cov"
+        "test-unit": "\"vendor/bin/phpunit\" --testsuite unit --colors=always --configuration tests/Unit/phpunit.xml.dist --coverage-php tests/report/unit.cov",
+        "test-integration": "\"vendor/bin/phpunit\" --testsuite integration --colors=always --configuration tests/Integration/phpunit.xml.dist --coverage-php tests/report/integration.cov",
+        "run-tests": [
+			"@test-unit",
+			"@test-integration"
+		]
     }
 }
