--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Unit tests
+name: Unit/Integration tests
 
 on:
     pull_request:
@@ -63,5 +63,5 @@ jobs:
     - name: Mysql8 auth plugin workaround
       run: sudo mysql -u root -proot -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'root';"
 
-    - name: Test
-      run: composer test-unit
+    - name: Unit/Integration tests
+      run: composer run-tests
