--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,3 +65,12 @@ jobs:
 
     - name: Unit/Integration tests
       run: composer run-tests
+
+    - name: Code Coverage Report
+      run: composer report-code-coverage
+
+    - name: Run codacy-coverage-reporter
+      uses: codacy/codacy-coverage-reporter-action@v1
+      with:
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        coverage-reports: tests/report/coverage.clover
